--- a/bio.css
+++ b/bio.css
@@ -3,3 +3,19 @@ body{
 
 
 }
+
+
+
+.flex-container1 {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.flex-container2 {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
