--- a/bio.css
+++ b/bio.css
@@ -1,21 +1,124 @@
+@charset "utf-8";
+/* CSS Document */
 
-body{
-  font family: "Arial";
+
+body {
+	font-family: "Arsenal Regular",sans-serif;
+	font-size: 20px;
+	padding: 0px;
+	line-height: 2;
+}
+#section-a{
+	padding:20px;
+	background:white;
+	color:black;
+	text-align:center;
+}
+
+/*------Meet the Team------*/
+
+#section-b{
+	padding: 20px;
+	background:white;
+	color: black;
+	text-align: center;
+}
+
+/*------Bios------*/
+
+#section-c{
+	display: flex;
+	
+}
+
+/*-----Contains all the boxes inside------*/
+
+#section-c div{
+	padding: 200px 200px;
+}
+
+
+/*------Boxes color scheme-----*/
+
+#section-c .box-1, #section-c .box-3{
+	background: #295D9B;
+	color: black;
+	
+}
+
+#section-c .box-2{
+	background: #f9f9f9;
+	color: black;
+	
+}
+
+/*----The actual photos and sizing of them------*/
+
+#section-c .box-1{
+	background-image:url("ScitechWebmaster.github.io/Hannah.jpg");
+	background-size: cover;
+	width: 33%;
+	height: 250px;
+	
+	
+}
+
+#section-c .box-2{
+	background-image:url("ScitechWebmaster.github.io/calebf.jpg");
+	background-size:cover;
+	width: 33%;
+	height: 250px;
+
+}
+
+#section-c .box-3{
+	background-image:url("ScitechWebmaster.github.io/kashishf.jpg");
+	background-size: cover;
+	width: 33%;
+	height: 250px;
+}
+
+#section-d {
+	display: flex;
+	text-align: center;
+	overflow: hidden;
+	list-style: none;
+	font-size: 20px;
+	color: black;
+	text-decoration: none;
+	background: white;
+}
+
+#section-d div{
+	padding:50px;
+	padding-bottom:400px;
 
 }
 
 
-
-.flex-container1 {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
+#section-d .box-4, #section-d .box-5, #section-d .box-6{
+	background: white;
+	color: #295D9B;
+	text-align:center;
+	
 }
 
-.flex-container2 {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
+#section-d .box-4{
+	height: 50px;
+	width: 33%;
+	text-align:center;
+}
+
+#section-d .box-5{
+	height:50px;
+	width: 33%;
+	background-size:cover;
+	text-align:center;
+}
+
+#section-d .box-6{
+	background-size:cover;
+	height:50px;
+	width: 33%;
+	text-align:center;
 }
