--- a/bio.css
+++ b/bio.css
@@ -71,3 +71,18 @@ body {
 	width: 25%;
 	text-align:center;
 }
+
+
+ footer {
+	width: 100%;
+	background-color: #222;
+	padding: 60px 0px;
+	list-style: none;
+	 text-decoration: none;
+	 
+}
+
+li a{
+	text-decoration: none;
+	color: white;
+}
