--- a/bio.css
+++ b/bio.css
@@ -15,19 +15,10 @@ body {
 	text-align:center;
 }
 
-/*------Meet the Team------*/
-
-#section-b{
-	padding: 20px;
-	background:white;
-	color: black;
-	text-align: center;
-}
-
 /*------Bios------*/
 
 
-#section-d {
+#section-l {
 	display: flex;
 	text-align: center;
 	overflow: hidden;
@@ -38,34 +29,34 @@ body {
 	background: white;
 }
 
-#section-d div{
+#section-l div{
 	padding:50px;
 	padding-bottom:400px;
 
 }
 
 
-#section-d .box-4, #section-d .box-5, #section-d .box-6{
+#section-l .box-7, #section-d .box-8, #section-d .box-9{
 	background: white;
 	color: #295D9B;
 	text-align:center;
 	
 }
 
-#section-d .box-4{
+#section-l .box-7{
 	height: 50px;
 	width: 25%;
 	text-align:center;
 }
 
-#section-d .box-5{
+#section-l .box-8{
 	height:50px;
 	width: 25%;
 	background-size:cover;
 	text-align:left;
 }
 
-#section-d .box-6{
+#section-l .box-9{
 	background-size:cover;
 	height:50px;
 	width: 25%;
